--- a/apps/home/views/layouts/main.html
+++ b/apps/home/views/layouts/main.html
@@ -151,7 +151,7 @@
         </span>
         <div class="cl"></div>
         <p>Powered by <a class="softname" href="{{constant('IKPHP_SITEURL')}}">{{constant('IKPHP_SITENAME')}}</a> {{constant('IKPHP_VERSION')}}  
-        <font color="green">本网站由 <a href="http://phalconphp.com/zh/" target="_blank">Phalcon框架</a> 强力驱动 版本 {{ version() }}</font> 
+        <font color="green">本网站由 <a href="http://docs.phalconphp.com/zh/latest/index.html" target="_blank">Phalcon框架</a> 强力驱动 版本 {{ version() }}</font> 
         </p>  
 
     </div>
